# visadore

./: .gitignore  README.md  setup.cfg  tox.ini
dev/: load_as_extension.py
visadore/: __init__.py  base.py  identity.py  instrument.py
visadore/mock_instrument/: feature.py  setup.cfg
visadore/mock_instrument/mock_instrument/: feature.py
visadore/test/: mock_instrument.yaml  test_identity_parser.py  test_mock_instrument.py
