[metadata]
name = visadore
version = attr: visadore.__VERSION__
description = A plugin manager for modules that implement complex pyvisa resource interactions
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Environment :: Console

[options]
zip_safe = False
packages = find:
install_requires =
    pyvisa
    stevedore
test_requires =
    pytest
    hypothesis

[tool:pytest]
addopts =
    -vv
    -ra
    --strict
    --tb=short
testpaths = visadore/test

[options.entry_points]
visadore.visadore.mock1a =
    local_product = visadore.mock_instrument.feature:LocalProductFeature
    instr_product = visadore.mock_instrument.feature:InstrumentProductFeature
    get_resource_name = visadore.mock_instrument.feature:ResourceNameFeature

