[metadata]
name = visadore-mock-instrument
version = 0.1
description = A mock instrument used for testing visadore
license_files = LICENSE.txt

[options]
zip_safe = False
packages = mock_instrument
install_requires =
    visadore

[options.entry_points]
visadore.visadore.mock1a =
    local_product = mock_instrument.feature:LocalProductFeature
    instr_product = mock_instrument.feature:InstrumentProductFeature
    get_resource_name = mock_instrument.feature:ResourceNameFeature
